<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Selected: null"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/note"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected" />

    <Spinner
        android:id="@+id/thermal_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note" />

    <Switch
        android:id="@+id/enable_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service_toggle_on_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thermal_modes"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

    <Switch
        android:id="@+id/force_set_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/force_set_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_service"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <Switch
        android:id="@+id/show_mode_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_current_mode_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/force_set_switch"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <Switch
        android:id="@+id/show_toast_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_toast_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_mode_switch"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <Switch
        android:id="@+id/profiler_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_profiler_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_toast_switch"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/open_profiler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_profiler_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profiler_switch"
        android:layout_margin="16dp"/>

    <Switch
        android:id="@+id/apply_on_boot_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply_on_boot_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_profiler"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <ImageView
        android:id="@+id/btn_xda"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/go_to_xda"
        android:elevation="10dp"
        android:src="@drawable/xda_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>